--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,49 @@
 version: 2.1
 orbs:
   node: circleci/node@3.0.0
+
+jobs:
+  build:
+    docker:
+      -image: circleci/node:18.8.0
+    steps:
+      - checkout
+      - run: npm i
+      - save_cache:
+        key: "npm-packages"
+        paths:
+          - src/node_modules
+      - run: npm run lint
+  
+  test:
+     docker:
+      -image: circleci/node:18.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - "npm-packages"
+      - run: npm i
+      - run: npm run test   
+
+  analzye:
+     docker:
+      -image: circleci/node:18.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - "npm-packages"
+      - run: npm i
+      - run: npm audit  
+
 workflows:
   node-tests:
     jobs:
-      - node/test
+      - build
+      - test
+          requires:
+            - build
+      - analzye
+          requires:
+            - test
